# vlass2caom2

./: Dockerfile  README.md  docker-entrypoint.sh  setup.cfg  setup.py  vlass_run.py  vlass_run_batch.sh
config/: config.yml
data/: ArchiveQuery-2018-08-15.csv  rejected_file_names-2018-09-05.csv
scripts/: astro_test.py  cache.yml  cadcproxy.pem  check_last_timestamp.py  config.yml  docker-entrypoint.sh  fix_header.py  fix_vlass_naxis.py  fix_vlass_reconcile.sh  make_reconcile_todo.sh  reconcile_list_vlass.sh  state.yml  test_test.py  visitor_query.sh  vlass_find.sh  vlass_provenance.sh  vlass_run.sh  vlass_run_state.sh  vlass_run_visitor.sh  vlass_validate.sh  web_log_content_cache.yml
vlass2caom2/: __init__.py  builder.py  catalog_augmentation.py  cleanup_augmentation.py  composable.py  data_source.py  fits2caom2_augmentation.py  main_app.py  metadata.py  position_bounds_augmentation.py  preview_augmentation.py  quality_augmentation.py  reader.py  scrape.py  storage_name.py  time_bounds_augmentation.py  utils.py  validator.py  vlass2caom2.py  vlass_composable.py  vlass_quality_augmentation.py  vlass_time_bounds_augmentation.py  vlass_validator.py  work.py
vlass2caom2/tests/: build_rejected_file_list.py  config.yml  conftest.py  get_rejected_file_names.sh  remove_dups.py  test_build_todo.py  test_caom_gen_visit.py  test_cleanup_augmentation.py  test_composable.py  test_data_source.py  test_main_app.py  test_metadata.py  test_preview_augmentation.py  test_scrape.py  test_storage_name.py  test_validator.py  test_vlass2caom2.py  test_vlass_composable.py  (+1 more)
(+107 files in other folders)
