[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[aliases]
test = pytest

[coverage:run]
omit = */tests/*

[tool:pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled
testpaths = vlass2caom2

[bdist_wheel]
universal=1

[metadata]
package_name = vlass2caom2
description = Application to generate VLASS observations in CAOM2 format.
long_description = TBD 
author = Canadian Astronomy Data Centre
author_email = cadc@nrc-cnrc.gc.ca
license = AGPLv3
url = TBD
edit_on_github = False
github_project = SharonGoliath/vlass2caom2
install_requires = caom2utils vos cadcdata
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 0.4


[entry_points]
vlass2caom2 = vlass2caom2.main_app:vlass_main
vlass_run = vlass2caom2.composable:run_by_builder
vlass_run_state = vlass2caom2.composable:run_by_state
vlass_run_single = vlass2caom2.composable:run_single
vlass_validate = vlass2caom2.validator:validate
